[gd_scene load_steps=3 format=3 uid="uid://bdgyefsokayw8"]

[ext_resource type="Script" path="res://scenes/level/level.gd" id="1_sfph8"]
[ext_resource type="PackedScene" uid="uid://i8b13apl0m8" path="res://entities/player/player.tscn" id="2_kc6ur"]

[node name="Level" type="Node3D"]
script = ExtResource("1_sfph8")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="SpawnPoints" type="Node3D" parent="."]

[node name="Player" parent="." instance=ExtResource("2_kc6ur")]

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="WaveLabel" type="Label" parent="UserInterface"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_right = 90.0
offset_bottom = 67.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Wave: 1"
horizontal_alignment = 1

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
